Added MFA and Account Linking with multiple auth providers (#39)
* Added Multi Factor Authentication and Account Linking with multiple auth providers
* Added CSRF protection for all routes
* Packages Updated
* Resolved some auth bugs
* Added reauthentication modal

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -33,6 +33,16 @@
   "sendLinkSuccess": "We sent you a link to your email! Follow the link to sign in.",
   "sendLinkSuccessToast": "Link successfully sent",
   "getNewLink": "Get a new link",
+  "verificationCode": "Verification Code",
+  "verificationCodeHint": "Enter the code we sent you by SMS",
+  "verificationCodeSubmitButtonLabel": "Submit Verification Code",
+  "sendingMfaCode": "Sending Verification Code...",
+  "verifyingMfaCode": "Verifying code...",
+  "sendMfaCodeError": "Sorry, we couldn't send you a verification code",
+  "verifyMfaCodeSuccess": "Code verified! Signing you in...",
+  "verifyMfaCodeError": "Ops! It looks like the code is not correct",
+  "reauthenticate": "Reauthenticate",
+  "reauthenticateDescription": "For security reasons, we need you to re-authenticate",
   "errors": {
     "auth/wrong-password": "The credentials entered are incorrect",
     "auth/user-disabled": "Your account has been disabled. Please contact Support.",
@@ -44,6 +54,17 @@
     "auth/popup-closed-by-user": "The popup was closed",
     "auth/cancelled-popup-request": "The request was cancelled. Please try again.",
     "auth/invalid-action-code": "Invalid action code",
+    "auth/invalid-phone-number": "Invalid phone number. Please use another format.",
+    "auth/multi-factor-auth-required": "Multi-factor authentication required",
+    "auth/invalid-verification-code": "Invalid verification code",
+    "auth/requires-recent-login": "Sorry, we require you to sign-in again to perform this action",
+    "auth/internal-error": "Sorry, we weren't able to process your request. Please try again.",
+    "auth/multi-factor-info-not-found": "The user does not have a second factor matching the identifier provided.",
+    "auth/invalid-verification-id": "The verification ID used to create the phone auth credential is invalid.",
+    "auth/invalid-multi-factor-session": "The request does not contain a valid proof of first factor successful sign-in.",
+    "auth/invalid-custom-token": "The custom token format is incorrect. Please check the documentation.",
+    "auth/code-expired": "The SMS code has expired. Please re-send the verification code to try again.",
+    "auth/no-auth-event": "Sorry, an internal error has occurred. Please try again",
     "default": "Email or Password are invalid. Please try again",
     "generic": "Sorry, we weren't able to authenticate you. Please try again.",
     "link": "Sorry, we encountered an error while sending your link. Please try again."
