--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,6 +2,13 @@
   "generalTab": "My Details",
   "emailTab": "Email",
   "passwordTab": "Password",
+  "manageConnectedAccounts": "Manage Connected Accounts",
+  "connectedAccounts": "Connected Accounts",
+  "authenticationTab": "Authentication",
+  "multiFactorAuth": "Multi-Factor Authentication",
+  "connectedAccountsSubheading": "Below are the accounts linked to your profile",
+  "availableProviders": "Available Providers",
+  "availableProvidersSubheading": "Click on the providers below to link your profile to the provider",
   "updateProfileSuccess": "Profile successfully updated",
   "updateProfileError": "Encountered an error. Please try again",
   "updatePasswordSuccess": "Password successfully updated",
@@ -26,5 +33,52 @@
   "passwordNotMatching": "Passwords do not match. Make sure you're using the correct password",
   "passwordNotChanged": "Your password has not changed",
   "emailsNotMatching": "Emails do not match. Make sure you're using the correct email",
-  "updatingSameEmail": "The email chosen is the same as your current one"
+  "updatingSameEmail": "The email chosen is the same as your current one",
+  "cannotUpdateEmail": "You cannot update your email because your account is not linked to any.",
+  "cannotUpdatePassword": "You cannot update your password because your account is not linked to any.",
+  "unlinkActionLabel": "Unlink",
+  "unlinkAccountModalHeading": "Unlink Account",
+  "confirmUnlink": "You're about to unlink this account.",
+  "confirmUnlinkSubmitLabel": "Yep, Unlink Account",
+  "unlinkActionSuccess": "Account successfully unlinked",
+  "unlinkActionError": "Sorry, we couldn't unlink this account",
+  "unlinkActionLoading": "Unlinking account...",
+  "linkActionSuccess": "Account successfully linked",
+  "linkActionError": "Sorry, we couldn't link this account",
+  "linkActionLoading": "Linking account...",
+  "linkAccount": "Link Account",
+  "connectWithProvider": "Connect with {{ provider }}",
+  "connectedWithProvider": "Connected with {{ provider }}",
+  "setupMfaButtonLabel": "Setup Multi-Factor Authentication",
+  "multiFactorAuthHeading": "Secure your account with Multi-Factor Authentication.",
+  "multiFactorAuthDescription": "Enable Multi-Factor Authentication to verify your identity for an extra layer of security to your account in case your password is stolen. In addition to entering your password, it requires you confirm your identity via SMS.",
+  "verifyPhoneNumberLoading": "Verifying phone number...",
+  "verifyPhoneNumberSuccess": "Phone number successfully verified",
+  "verifyPhoneNumberError": "Sorry, we weren't able to verify the phone number",
+  "mfaEnabledSuccessTitle": "Multi-Factor authentication is enabled",
+  "mfaEnabledSuccessDescription": "Congratulations! You have successfully enrolled in the multi factor authentication process. You will now be able to access your account with a combination of your password and an authentication code sent to your phone number.",
+  "mfaActivationLoading": "Activating Multi-Factor...",
+  "mfaActivationError": "Sorry, we weren't able to verify the code provided",
+  "verifyPhoneNumberSubmitLabel": "Verify Phone Number",
+  "verifyActivationCodeSubmitLabel": "Enter Verification Code",
+  "verificationCode": "Verification Code",
+  "phoneNumberLabel": "Phone Number",
+  "verifyPhoneNumberDescription": "Enter your Phone Number. We will send you a verification code by SMS.",
+  "verifyActivationCodeDescription": "Enter the verification code we sent you by SMS",
+  "mfaEnabledSuccessAlert": "Multi-Factor authentication is enabled",
+  "disableMfa": "Disable Multi-Factor Authentication",
+  "disableMfaButtonLabel": "Disable MFA",
+  "confirmDisableMfaButtonLabel": "Yes, disable MFA",
+  "disablingMfa": "Disabling Multi-Factor Authentication. Please wait...",
+  "disableMfaSuccess": "Multi-Factor Authentication successfully disabled",
+  "disableMfaError": "Sorry, we encountered an error. MFA has not been disabled.",
+  "sendingEmailVerificationLink": "Sending Email...",
+  "sendEmailVerificationLinkSuccess": "Verification link successfully sent",
+  "sendEmailVerificationLinkError": "Sorry, we weren't able to send you the email",
+  "sendVerificationLinkSubmitLabel": "Send Verification Link",
+  "sendVerificationLinkSuccessLabel": "Email sent! Check your Inbox",
+  "verificationLinkAlertDescription": "Your email is not yet verified. Please verify your email to be able to set up Multi-Factor Authentication.",
+  "authFactorName": "Factor Name (optional)",
+  "authFactorNameHint": "Assign a name that helps you remember the phone number used",
+  "loadingUser": "Loading user details. Please wait..."
 }
