--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -33,6 +33,7 @@
   "passwordResetSubheading": "Enter your email address below. You will receive a link to reset your password.",
   "passwordResetSuccessMessage": "Check your Inbox! We emailed you a link for resetting your Password.",
   "passwordRecoveredQuestion": "Password recovered?",
+  "passwordLengthError": "Please provide a password with at least 6 characters",
   "sendEmailLink": "Send Email Link",
   "sendingEmailLink": "Sending Email Link...",
   "sendLinkSuccess": "We sent you a link to your email! Follow the link to sign in.",
