Enforce email confirmation (#106)
1. Added email confirmation
2. Fix CSRF for multiple tabs
3. Disable email verification enforcement for invited members
4. Updated packages
5. Design improvements
6. Improvements to theme toggle

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -50,6 +50,10 @@
   "reauthenticate": "Reauthenticate",
   "reauthenticateDescription": "For security reasons, we need you to re-authenticate",
   "errorAlertHeading": "Sorry, we could not authenticate you",
+  "emailConfirmationAlertHeading": "We sent you a confirmation email.",
+  "emailConfirmationAlertBody": "Welcome! Please check your email and click the link to verify your account.",
+  "sendAgainEmailVerificationLabel": "Send again",
+  "sendAgainEmailVerificationSuccess": "Email verification sent",
   "errors": {
     "auth/wrong-password": "The credentials entered are incorrect",
     "auth/user-disabled": "Your account has been disabled. Please contact Support.",
